0.1-81
- add oce.approx()
- add topo.world dataset
- reformulate sun.angle in R
- fix issue 56 [plot.topo() should accept land.z=NULL]
- fix issue 55 [plot.topo() could go past poles]
- fix issue 54 [plot.topo() was resetting par() on exit]
- fix issue 53 [interp.barnes() gives poor error msg for mismatched x and y]
- fix issue 52 [plot.section() draws incorrect bottom shape]
0.1-80
- add sun.angle [not tested yet; needs R reformulation]
- fix issue 51 [summary.section() does not report water depth]
- fix issue 50 [non-bug relating to sun elevation]
- fix issue 49 [demo(TS) broken]
0.1-79
- fix issue 48 [oce.plot.sticks() ignored page ratio]
- fix issue 47 [cannot read new MEDS sealevel format]
0.1-78
- add data(RRprofile)
- to plot.TS(), add arguments lwd.rho and lty.rho
0.1-77
- refactor adp code wrt transformation matrices
- add matrix.smooth()
- improve labels for oce.axis.POSIXct()
- set default for 'debug' argument to getOption("oce.debug") in all functions
- plot.profile(): add argument ytype; change 'type' to 'xtype'
- add sw.z()
- add oce.smooth()
- add read.adv(), etc., supporting Nortek and Sontek devices
- add read.adp(), etc., supporting Nortek, RDI and Sontek devices
- add oce.plot.ts()
- add imagep()
- add bcd2integer()
- add matlab2POSIXt()
- to most plot functions, add 'mgp' and 'mar' arguments
- plot.pt(): add plim and Tlim arguments
- gravity(): give default for latitude argument
- plot.sealevel(): remove argument focus.time and add argument which
- rename tdr functions as pt, to reflect oral convention
- add geod.xy()
- add argument 'mgp' to all plotting functions
- use abbreviations for axis names if space is tight
- add argument 'adorn' to all plot() functions
- add oce.colors.two(), oce.colors.jet(), and oce.colors.palette()
- rename gebco.colors() as oce.colors.gebco()
- add byte2binary()
- add "lty.grid" to all CTD plotting functions
- add "+.section", a more convenient way to build sections from stations