@@ -7,22 +7,22 @@
 \description{Plot a CTD profile, in any of several common formats.}
 
 \usage{plot.profile(x,
-xtype="S", 
-ytype=c("pressure", "z"),
-col.S="darkgreen",
-col.t="red",
-col.rho="blue",
-col.N2="brown",
-col.dpdt="darkgreen",
-col.time="darkgreen",
-grid=TRUE,
-col.grid="lightgray",
-lty.grid="dotted",
-Slim, Tlim, densitylim, N2lim, dpdtlim, timelim, ylim,
-lwd,
-xaxs="r", yaxs="r",
-mgp=getOption("oce.mgp"),
-mar=c(mgp[1]+1, mgp[1]+1, mgp[1] + 1.5, 0.5),
+             xtype="S", 
+             ytype=c("pressure", "z"),
+             col.S="darkgreen",
+             col.t="red",
+             col.rho="blue",
+             col.N2="brown",
+             col.dpdt="darkgreen",
+             col.time="darkgreen",
+             grid=TRUE,
+             col.grid="lightgray",
+             lty.grid="dotted",
+             Slim, Tlim, densitylim, N2lim, dpdtlim, timelim, ylim,
+             lwd,
+             xaxs="r", yaxs="r",
+             mgp=getOption("oce.mgp"),
+             mar=c(mgp[1]+1, mgp[1]+1, mgp[1] + 1.5, 0.5),
 \dots)
 }
 
