@@ -1,4 +1,5 @@
 0.1-81
+- add "reiniger-ross" method to ctd.decimate()
 - add oce.approx()
 - add topo.world dataset
 - reformulate sun.angle in R
